--- a/index.html
+++ b/index.html
@@ -33,21 +33,25 @@
       <nav class="border-b border-gray-200">
         <div
           id="categoryContainer"
-          class="flex gap-10 text-lg container mx-auto px-5"
+          class="flex gap-5 md:gap-10 text-lg container mx-auto p-4 flex-wrap"
         ></div>
       </nav>
     </header>
 
-    <main class="container mx-auto px-5 mt-5 grid grid-cols-4 gap-5">
+    <main
+      class="container mx-auto px-5 mt-5 grid grid-rows-1 md:grid-cols-4 gap-5"
+    >
       <!-- <div class="grid grid-cols-3 gap-5 col-span-3" id="newsContainer">
         <div class="bg-red-500 p-3">Loading...</div>
       </div> -->
       <div
         id="newsContainer"
-        class="col-span-3 grid md:grid-cols-4 gap-5"
+        class="col-span-3 grid md:grid-cols-4 gap-5 order-2 md:order-1"
       ></div>
 
-      <div class="col-span-1 border border-gray-300 rounded-lg overflow-hidden">
+      <div
+        class="col-span-3 border border-gray-300 rounded-lg overflow-hidden order-1 md:col-span-1 md:order-2"
+      >
         <div class="bg-red-500 text-white p-3">
           <h1>Bookmark</h1>
           <p id="bookmarkCount">0</p>
